# eddi_and_iog

./: .gitignore  README.md  build.sh  check_code.sh  install.py  pyproject.toml
linux/: eddi_and_iog-0.0.2-py3-none-any.whl  eddi_and_iog-0.0.4-py3-none-any.whl  eddi_and_iog-1.0.0-py3-none-any.whl  eddi_and_iog-1.0.1-py3-none-any.whl  eddi_and_iog-1.0.2-py3-none-any.whl  eddi_and_iog-1.0.3-py3-none-any.whl  eddi_and_iog-1.0.4-py3-none-any.whl
src/eddi_and_iog/: eddi_and_iog.py  myenergi.py
src/eddi_and_iog/assets/: pyproject.toml
tests/: conftest.py  test_eddi_and_iog.py  test_myenergi.py  test_octopus.py
