[project]
name = "eddi-and-iog"
version = "1.0.0"
description = "A tool to check if your Intelligent Octopus Go account has scheduled an EV charge outside the 23:30-5:30 slot. If this is found to be the case configure your Myenergi EDDI unit to heat water during this period using cheap grid energy."
authors = [
    {name = "Paul Austen",email = "pjaos@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11.2"
dependencies = [
]

[tool.poetry]
packages = [{include = "eddi_and_iog", from = "src"}]

[tool.poetry.dependencies]
# Cross-platform packages
requests = "*"
dotenv = "*"
p3lib = "^1.1.155"
pytest = "*"

[tool.poetry.scripts]
eddi_and_iog = "eddi_and_iog.eddi_and_iog:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
